# spysec

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dbinit.sql  docker-compose.yml  filings.json
jobs/: report.py
migrations/2023-01-16-063808_initial/: down.sql  up.sql
migrations/2023-01-16-203329_add_url/: down.sql  up.sql
migrations/2023-01-16-213848_set_not_null/: down.sql  up.sql
migrations/2023-01-18-213230_add_accessno/: down.sql  up.sql
migrations/2023-01-19-064021_add_weburl/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  secweb.rs
src/crawler/: mod.rs
src/database/: insert_models.rs  mod.rs  models.rs  query_models.rs
src/secweb/: mod.rs  models.rs  parser.rs  persist.rs
src/secweb/parser/: filing.rs  index.rs  mod.rs  xmlfiling.rs
