[package]
name = "spysec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0", features = ["serde"]}
minidom = "0.15.0"
regex = "1.7.1"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive", "rc"]}
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"